--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,62 +23,105 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../static/css/styles.css" />
+    <link rel="stylesheet" href="../static/tabpay_css/dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style></style>
   </head>
   <body>
-    <!-- Mobile Navbar and Profile Section -->
-    <div class="container-fluid d-md-none mobile-nav">
-      <a class="navbar-brand logo" href="#">
+    <!-- Mobile Header with Hamburger, Logo, and Logout -->
+    <div
+      class="container-fluid d-lg-none mobile-header"
+      style="background-color: whitesmoke"
+    >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasSidebar"
+        aria-controls="offcanvasSidebar"
+      >
+        <i class="bi bi-list hamburger"></i>
+      </button>
+
+      <div class="tabpay-logo text-center">
         <img src="../static/images/logo.png" alt="TabPay Logo" />
-      </a>
-      <div class="profile-info">
-        <span><i class="bi bi-chevron-down me-2"></i>Cheruiyot </span>
-        <img
-          src="../static/images/profile_image.png"
-          alt="Profile Picture"
-          class="rounded-circle"
-        />
       </div>
+      <a href="{{ url_for('main.home') }}" class="text-dark">
+        <i
+          class="bi bi-box-arrow-right"
+          style="color: red; font-size: larger"
+        ></i>
+      </a>
     </div>
 
-    <!-- Static navigation for small screens -->
-    <div class="container-fluid d-md-none mobile-nav-links">
-      <a
-        href="{{ url_for('main.dashboard_stats') }}"
-        class="{% if request.endpoint == 'main.dashboard_stats' %}active{% endif %}"
-        >Dashboard</a
-      >
-      <a
-        href="{{ url_for('main.manage_contribution') }}"
-        class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
-        >Contribute</a
-      >
-      <a
-        href="{{ url_for('main.host') }}"
-        class="{% if request.endpoint == 'main.host' %}active{% endif %}"
-        >Host</a
-      >
-      <a
-        href="{{ url_for('main.block_reports') }}"
-        class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
-        >Reports</a
-      >
+    <!-- Offcanvas Sidebar for small screens -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="offcanvasSidebar"
+      aria-labelledby="offcanvasSidebarLabel"
+      style="background-color: white"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasSidebarLabel">Menu</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="tabpay-logo mb-2">
+          <img src="../static/images/logo.png" alt="TabPay Logo" />
+        </div>
+
+        <a
+          href="{{url_for('main.dashboard_stats')}}"
+          style="background-color: {% if 'Dashboard' in title %} rgb(76, 147, 35) {% endif %}; 
+               border-radius: 5px; 
+               color: white;"
+        >
+          <i class="bi bi-grid-fill"></i> Dashboard
+        </a>
+        <a
+          href="{{ url_for('main.manage_contribution') }}"
+          class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
+          ><i class="bi bi-currency-exchange"></i> Contribute</a
+        >
+        <a
+          href="{{ url_for('main.host') }}"
+          class="{% if request.endpoint == 'main.host' %}active{% endif %}"
+          ><i class="bi bi-house-fill"></i> Host</a
+        >
+        <a
+          href="{{ url_for('main.block_reports') }}"
+          class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
+          ><i class="bi bi-bar-chart-fill"></i> Reports</a
+        >
+        <div class="sidebar-bottom">
+          <a
+            href="{{ url_for('main.dashboard_settings') }}"
+            class="{% if request.endpoint == 'main.dashboard_settings' %}active{% endif %}"
+            ><i class="bi bi-gear-fill"></i> Settings</a
+          >
+          <a href="{{ url_for('main.home') }}"
+            ><i class="bi bi-box-arrow-left"></i> Logout</a
+          >
+        </div>
+      </div>
     </div>
 
     <!-- Main Content Area -->
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2">
-          <div class="logo-sidebar-section">
-            <!-- Sidebar for larger screens -->
-            <div class="glass-sidebar d-none d-md-block d-flex">
-              <!-- Sidebar contents -->
-              <div class="tabpay-logo mb-2">
-                <img src="../static/images/logo.png" alt="TabPay Logo" />
-              </div>
-
+        <div class="col-lg-2 d-flex -flex-column">
+          <!-- Sidebar for larger screens -->
+          <div class="glass-sidebar">
+            <div class="tabpay-logo mb-3">
+              <img src="../static/images/logo.png" alt="TabPay Logo" />
+            </div>
+            <!-- Sidebar contents -->
+            <div class="links mt-3">
               <a
                 href="{{url_for('main.dashboard_stats')}}"
                 style="background-color: {% if 'Dashboard' in title %} rgb(3, 185, 3) {% endif %}; 
@@ -102,22 +145,21 @@
                 class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
                 ><i class="bi bi-bar-chart-fill"></i> Reports</a
               >
-              <div class="sidebar-bottom mt-auto">
-                <a
-                  href="{{ url_for('main.dashboard_settings') }}"
-                  class="{% if request.endpoint == 'main.dashboard_settings' %}active{% endif %}"
-                  ><i class="bi bi-gear-fill"></i> Settings</a
-                >
-                <a href="{{ url_for('main.home') }}"
-                  ><i class="bi bi-box-arrow-left"></i> Logout</a
-                >
-              </div>
             </div>
-            <!-- Close Sidebar -->
+            <div class="sidebar-bottom">
+              <a
+                href="{{ url_for('main.dashboard_settings') }}"
+                class="{% if request.endpoint == 'main.dashboard_settings' %}active{% endif %}"
+                ><i class="bi bi-gear-fill"></i> Settings</a
+              >
+              <a href="{{ url_for('main.home') }}"
+                ><i class="bi bi-box-arrow-left"></i> Logout</a
+              >
+            </div>
           </div>
         </div>
 
-        <div class="col-md-10">
+        <div class="col-lg-10">
           <div class="header-profile-body mt-3">
             <div class="row d-flex justify-content-between">
               <div class="col-md-6">
@@ -125,7 +167,7 @@
                   {% block heading %}{% endblock %}
                 </h1>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 d-none d-lg-block">
                 <!-- Profile section -->
                 <div class="profile-area">
                   <i class="bi bi-search me-2"></i>
@@ -145,15 +187,15 @@
       </div>
     </div>
 
-    <!-- Footer for small screens -->
+    <!-- Footer for small screens with Profile, Alerts, Search -->
     <div class="container-fluid d-md-none mobile-footer">
-      <i class="bi bi-bell">Alerts</i>
-      <div class="icon-container">
-        <span>Search</span><i class="bi bi-search ms-2"></i>
+      <i class="bi bi-bell"></i>
+      <!-- Alert icon -->
+      <div class="search-bar mt-2">
+        <input type="text" class="form-control ps-4" placeholder="Search" />
       </div>
-      <a href="{{ url_for('main.dashboard_settings') }}" class="settings-link"
-        ><i class="bi bi-gear-fill"></i> Settings</a
-      >
+
+      <img src="../static/images/profile_image.png" alt="Profile Picture" />
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
