--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,34 +1,35 @@
-{% extends "auth.html" %} {% block content %}
-<div class="contmage">
-  <div class="left">
-    <img
-      src="../static/images/image1.png"
-      alt="Placeholder"
-      class="object-cover h-full w-full"
-    />
-  </div>
-  <div class="form-section">
-    <div class="tabpay-logo m-2">
-      <a href="{{url_for('main.home')}}"
-        ><img src="../static/images/logo.png" alt=""
-      /></a>
-    </div>
-    <div class="text-center">
-      <h1 class="custom-heading">Forgot Password</h1>
-      <h2 class="custom-subheading">New Password</h2>
-    </div>
-
-    <hr class="divider" />
-    <label for="email" class="custom-label">Please enter Email</label>
-    <input
-      type="email"
-      id="email"
-      class="custom-input"
-      placeholder="hello@reallygreatsite.com"
-    />
-    <div class="btn">
-      <button class="custom-button">SEND</button>
+{% extends 'auth.html' %} {% block content %}
+<div class="container-fluid">
+  <div class="main-container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="image-section"></div>
+      </div>
+      <div class="col-lg-6">
+        <div class="head-form">
+          <div class="p-4">
+            <h1>Forgot Password</h1>
+            <p>New Password</p>
+          </div>
+            <hr />
+            <div class="form-section">
+              <div>
+                <label for="email">Please enter Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="hello@reallygreatsite.com"
+                  required
+                />
+              </div>
+            
+              <button type="submit">SEND</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
