--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,58 +1,66 @@
 {% extends 'auth.html' %} {% block content %}
-<main class="create-account-body">
-  <div class="acc-container">
-    <div class="acc-image-section"></div>
-    <div class="acc-form-section">
-      <div class="tabpay-logo m-2">
-        <a href="{{url_for('main.home')}}"
-          ><img src="../static/images/logo.png" alt=""
-        /></a>
+<div class="container-fluid">
+  <div class="main-container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="image-section"></div>
       </div>
-      <h1 class="acc-h1">Create new Account</h1>
-      <p class="acc-p">
-        Already Registered?
-        <a
-          href="{{url_for('main.login')}}"
-          style="text-decoration: none; color: #46e905"
-          >Login</a
-        >
-      </p>
+      <div class="col-lg-6">
+        <div class="head-form">
+          <div class="p-3">
+            <h1>
+              Create new <br />
+              Account
+            </h1>
+            <p>
+              Already Registered?
+              <a
+                href="{{url_for('main.login')}}"
+                style="text-decoration: none; color: #3fb411"
+                >Login</a
+              >
+            </p>
+          </div>
+          <div class="hr"><hr /></div>
 
-      <hr />
-      <label for="name" class="acc-label">Please enter your Full Names</label>
-      <input
-        type="text"
-        class="acc-input"
-        id="name"
-        placeholder="Jiara Martins"
-        required
-      />
-      <label for="email" class="acc-label">Please enter Email</label>
-      <input
-        type="email"
-        class="acc-input"
-        id="email"
-        placeholder="hello@reallygreatsite.com"
-        required
-      />
-      <label for="password" class="acc-label">Please enter password</label>
-      <input
-        type="password"
-        class="acc-input"
-        id="password"
-        placeholder="******"
-        required
-      />
-      <label for="ID No" class="acc-label">ID No:</label>
-      <input
-        type="number"
-        class="acc-input"
-        id="ID No"
-        placeholder="xxxxxxxx"
-        required
-      />
-      <button type="submit" class="acc-button">SIGN UP</button>
+          <div class="form-section">
+            <div>
+              <label for="name">Please enter your Full Names</label>
+              <input
+                type="text"
+                id="name"
+                placeholder="Jiara Martins"
+                required
+              />
+            </div>
+            <div>
+              <label for="email">Please enter Email</label>
+              <input
+                type="email"
+                id="email"
+                placeholder="hello@reallygreatsite.com"
+                required
+              />
+            </div>
+            <div>
+              <label for="password">Please enter password</label>
+              <input
+                type="password"
+                id="password"
+                placeholder="******"
+                required
+              />
+            </div>
+            <div>
+              <label for="ID No" class="label d-block">ID No:</label>
+              <input type="number" id="ID No" placeholder="xxxxxxxx" required />
+            </div>
+            <button type="submit">SIGN UP</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</main>
+</div>
+
 {% endblock %}
