change d-lg-none in footer

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -188,7 +188,7 @@
     </div>
 
     <!-- Footer for small screens with Profile, Alerts, Search -->
-    <div class="container-fluid d-md-none mobile-footer">
+    <div class="container-fluid d-lg-none mobile-footer">
       <i class="bi bi-bell"></i>
       <!-- Alert icon -->
       <div class="search-bar mt-2">
