--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block heading %} Welcome back, Patrick Cheruiyot{%
+{% extends "base.html" %} {% block heading %} Welcome back, {{ current_user.full_name }}{%
 endblock %} {% block content %}
 <main class="temp-5-body">
   <!-- Dashboard Content -->
